# Application_for_analyzing_bank_transactions

./: .coverage  .env_template  .gitignore  README.md  config.py  main.py  pyproject.toml
htmlcov/: class_index.html  config_py.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_reports_py.html  z_a44f0ac069e85531_test_services_py.html  z_a44f0ac069e85531_test_views_py.html
src/: main.py  reports.py  services.py  test.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_views.py
