[project]
name = "application-for-analyzing-bank-transactions"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafail_Shiryaev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
